[gd_scene load_steps=11 format=2]

[ext_resource path="res://PlayerStuff/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bosses/Depression/Level.gd" type="Script" id=2]
[ext_resource path="res://Infra/GameHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bosses/Depression/Depression.tscn" type="PackedScene" id=4]
[ext_resource path="res://Infra/FadeScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/bar.png" type="Texture" id=6]
[ext_resource path="res://assets/images/mouse_left.png" type="Texture" id=7]
[ext_resource path="res://Life/TransitionShader.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 350 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 580.292, 286.836 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="GameHUD" parent="." instance=ExtResource( 3 )]

[node name="SpeedBoostTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ArenaWalls" type="StaticBody2D" parent="." groups=[
"walls",
]]
collision_layer = 4
collision_mask = 7

[node name="TopWall" type="CollisionPolygon2D" parent="ArenaWalls"]
polygon = PoolVector2Array( 1920, 0, 1920, 30, 0, 30, 0, 0 )

[node name="BottomWall" type="CollisionPolygon2D" parent="ArenaWalls"]
polygon = PoolVector2Array( 1920, 1050, 1920, 1080, 0, 1080, 0, 1050 )

[node name="LeftWall" type="CollisionPolygon2D" parent="ArenaWalls"]
position = Vector2( 0, 1080 )
polygon = PoolVector2Array( 0, 0, 0, -1080, 30, -1080, 30, 0 )

[node name="RightWall" type="CollisionPolygon2D" parent="ArenaWalls"]
position = Vector2( 0, 1080 )
polygon = PoolVector2Array( 1890, 0, 1890, -1080, 1920, -1080, 1920, 0 )

[node name="Projectiles" type="Node" parent="."]

[node name="FakeSpeedBoosts" type="Node" parent="."]

[node name="SpeedBoosts" type="Node" parent="."]

[node name="Depression" parent="." instance=ExtResource( 4 )]
position = Vector2( 997.154, 350.976 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 467, 263 )

[node name="Delusions" type="Node" parent="."]

[node name="BoostSpawnAreaL" type="Area2D" parent="."]
position = Vector2( 500, 500 )

[node name="CollisionShape" type="CollisionShape2D" parent="BoostSpawnAreaL"]
shape = SubResource( 1 )

[node name="BoostSpawnAreaR" type="Area2D" parent="."]
position = Vector2( 1500, 500 )

[node name="CollisionShape" type="CollisionShape2D" parent="BoostSpawnAreaR"]
shape = SubResource( 1 )

[node name="BossArea" type="Area2D" parent="."]
position = Vector2( 965, 500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
shape = SubResource( 2 )

[node name="FadeScreen" parent="." instance=ExtResource( 5 )]

[node name="Tween" type="Tween" parent="."]

[node name="TransitionShader" parent="." instance=ExtResource( 9 )]

[node name="Tutorial" type="Node2D" parent="."]
position = Vector2( 917.97, 934.551 )

[node name="Bar" type="TextureRect" parent="Tutorial"]
margin_right = 152.0
margin_bottom = 46.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse" type="TextureRect" parent="Tutorial"]
margin_left = -12.0586
margin_top = -58.7863
margin_right = 187.941
margin_bottom = 141.214
rect_scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Tutorial"]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="SpeedBoostTimer" to="." method="_on_SpeedBoostTimer_timeout"]
[connection signal="timeout" from="Tutorial/Timer" to="." method="_on_Timer_timeout"]
